@@ -306,7 +306,7 @@ get_child_index(CongEditorNodeElementListitem* listitem)
 			return item_count+1;
 		}
 		
-		if (cong_node_is_tag(node_child, "listitem")) {
+		if (cong_node_is_tag(node_child, NULL, "listitem")) {
 			item_count++;
 		}
 		
@@ -334,11 +334,11 @@ cong_editor_node_element_listitem_calculate_label (CongEditorNodeElementListitem
 		return cong_util_string_from_unichar (BULLET_UNICHAR);
 	}
 
-	if (cong_node_is_tag(node_parent, "itemizedlist")) {
+	if (cong_node_is_tag(node_parent, NULL, "itemizedlist")) {
 
 		return cong_util_string_from_unichar (BULLET_UNICHAR);
 
-	} else if (cong_node_is_tag(node_parent, "orderedlist")) {
+	} else if (cong_node_is_tag(node_parent, NULL, "orderedlist")) {
 		CongXMLChar* attr_numeration = cong_node_get_attribute(node_parent, "numeration");
 		enum CongNumeration numeration = cong_util_get_numeration_from_docbook_orderedlist_attr (attr_numeration);
 		guint child_index = get_child_index(listitem);
