@@ -31,6 +31,7 @@
 #include "cong-graph.h"
 #include "cong-dialog.h"
 #include "cong-primary-window.h"
+#include "cong-util.h"
 
 #include "cong-fake-plugin-hooks.h"
 
@@ -179,7 +180,8 @@ static void parse_tocentry(GenerateWebsiteWorkspace *workspace, WebsiteContent *
 	content = website_content_new(node, parent_content);
 
 	for (child=node->children; child; child=child->next) {
-		if (cong_node_is_tag(child, "tocentry")) {
+
+		if (cong_node_is_tag(child, NULL, "tocentry")) {
 			parse_tocentry(workspace, content, child);
 		}
 	}
@@ -196,7 +198,7 @@ static void parse_toc(GenerateWebsiteWorkspace *workspace, xmlNodePtr node) {
 	workspace->toc = toc;
 
 	for (child=node->children; child; child=child->next) {
-		if (cong_node_is_tag(child, "tocentry")) {
+		if (cong_node_is_tag(child, NULL, "tocentry")) {
 			parse_tocentry(workspace, toc, child);
 		}
 	}
@@ -220,17 +222,17 @@ static void traverse_layout(GenerateWebsiteWorkspace *workspace, xmlNodePtr node
 	g_message("traverse_layout <%s>", node->name);
 
 	for (child=node->children; child; child=child->next) {
-		if (cong_node_is_tag(child, "config")) {
+		if (cong_node_is_tag(child, NULL, "config")) {
 			parse_config(workspace, child);
-		} else if (cong_node_is_tag(child, "copyright")) {
+		} else if (cong_node_is_tag(child, NULL, "copyright")) {
 			parse_copyright(workspace, child);
-		} else if (cong_node_is_tag(child, "headlink")) {
+		} else if (cong_node_is_tag(child, NULL, "headlink")) {
 			parse_headlink(workspace, child);
-		} else if (cong_node_is_tag(child, "style")) {
+		} else if (cong_node_is_tag(child, NULL, "style")) {
 			parse_style(workspace, child);
-		} else if (cong_node_is_tag(child, "toc")) {
+		} else if (cong_node_is_tag(child, NULL, "toc")) {
 			parse_toc(workspace, child);
-		} else if (cong_node_is_tag(child, "notoc")) {
+		} else if (cong_node_is_tag(child, NULL, "notoc")) {
 			parse_notoc(workspace, child);
 		}
 	}	
@@ -244,7 +246,7 @@ static void traverse_dom_tree(GenerateWebsiteWorkspace *workspace, xmlNodePtr no
 	g_message("traverse_dom_tree <%s>", node->name);
 
 	for (child=node->children; child; child=child->next) {
-		if (cong_node_is_tag(child,"layout") ){
+		if (cong_node_is_tag(child, NULL, "layout") ){
 			traverse_layout(workspace, child);
 		}
 	}	
